# SkyDrive-X-Desktop

./: .gitignore  AGENTS.md  README.md  build_rust.sh  pubspec.yaml
.github/workflows/: desktop-build.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/theme/: theme.dart
lib/utils/: download_destination.dart  download_destination_io.dart  download_destination_stub.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: auth.rs  mod.rs  simple.rs
rust/src/api/auth/: auth.rs  mod.rs  refresh.rs
rust/src/api/drive/: client.rs  delete.rs  details.rs  download.rs  download_manager.rs  info.rs  list.rs  mod.rs  models.rs  move_item.rs  share.rs  upload.rs  upload_manager.rs
rust/src/api/settings/: download_concurrency.rs  download_directory.rs  mod.rs
rust/src/db/: auth.rs  download_tasks.rs  mod.rs  settings.rs  upload_tasks.rs
rust/src/download_manager/: core.rs  mod.rs  storage.rs
rust/src/settings/: download_concurrency.rs  download_directory.rs  mod.rs
rust/src/upload_manager/: core.rs  mod.rs  storage.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_skydrivex.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+79 files in other folders)
